# syno-photos-util

./: .gitignore  Cargo.toml  README.md
.github/workflows/: github-actions.yml
src/: cli.rs  conf.rs  fs.rs  http.rs  io.rs  lib.rs  main.rs
src/commands/: api_client.rs  check_update.rs  error.rs  logout.rs  mod.rs  status.rs
src/commands/export/: api_client.rs  mod.rs
src/commands/list/: api_client.rs  mod.rs
src/commands/list_albums/: mod.rs
src/commands/login/: api_client.rs  creds.rs  mod.rs
src/test/: mod.rs
