[package]
name = "syno-photos-util"
version = "0.1.1"
edition = "2021"
description = "Helper for a number of tasks unavailable in Synology Photos web interface"
license = "GPL-3.0-or-later"
authors = ["Piotr Karasinski"]
readme = "README.md"
repository = "https://github.com/caleb9/syno-photos-util"
keywords = [
    "synology",
    "synology-photos",
    "synology-nas",
    "cli-app",
]
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.*"
clap = { version = "4.*", features = ["derive", "wrap_help"] }
derive_more = { version = "0.99", default-features = false, features = ["display"] }
dirs = "5.*"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
serde_with = "3.*"
simple_logger = "4.3"
syno_api = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
yapp = { version = "0.4" }

[dev-dependencies]
mockall = "0.12"